data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1401.wast
;; 2. **Test Description**: Create an `if` block inside a `loop`, with a `br_if` that conditionally targets the loop. Verify branching to the loop's start.    - **Constraint Checked**: Label management and backward jump resolution.    - **Related Issue**: Correct identification of `loop` output type and jumping to the loop's start.

(assert_invalid
  (module
    (func $test-loop-if-br_if
      (loop (block
        (if
          (br_if 0 (i32.const 1))
        )
      ))
    )
  )
  "type mismatch"
)